# penrose

./: Cargo.toml
aux/: PKGBUILD  autostart.sh  install.sh  penrose.desktop
src/: main.rs
