[package]
name = "bun-penrose"
version = "0.1.0"
authors = ["fredeb <frederikbraendstrup@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
penrose = { version = "0.2.0", features = [ "xcb", "xcb_draw" ] }
simplelog = "0.9.0"
