[package]
name = "bun-penrose"
version = "0.1.0"
authors = ["fredeb <frederikbraendstrup@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
penrose = { git = "https://github.com/sminez/penrose", features = [ "xcb", "xcb_draw", "keysyms", "serde" ] }
simplelog = "0.9.0"
